--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
         <tr>
-          <td><img src="image/parth c.png" alt=""></td>
+          <td><img src="parth c.png" alt=""></td>
           <td>
             <table>
               <tr>
